--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -1108,7 +1108,7 @@
     "    path='C:\\\\Users\\\\Reliance Digital\\\\Desktop\\\\ml\\\\statefarm\\\\images\\\\train\\\\'+dir+'\\\\*.jpg'\n",
     "    g=glob.glob(path) \n",
     "    shuf=np.random.permutation(g) \n",
-    "    for i in range(750):\n",
+    "    for i in range(500):\n",
     "        #dest='C:\\\\Users\\\\Reliance Digital\\\\Desktop\\\\ml\\\\statefarm\\\\images\\\\valid\\\\' + dir  \n",
     "        #print (shuf[i].replace(\"train\",\"valid\"))\n",
     "        os.rename(shuf[i],shuf[i].replace(\"train\",\"valid\"))  "
@@ -1167,6 +1167,56 @@
    "source": [
     "valid_gen=ImageDataGenerator()\n",
     "valid_batches=valid_gen.flow_from_directory(directory='C:\\\\Users\\\\Reliance Digital\\\\Desktop\\\\ml\\\\statefarm\\\\images\\\\valid',target_size=(224,224,3),color_mode='rgb',class_mode='categorical',shuffle='True',batch_size=15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dropout,Conv2D,Flatten,BatchNormalization,Dense,MaxPooling2D\n",
+    "from keras import optimizers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model=Sequential() \n",
+    "model.add(BatchNormalization(axis=1,input_shape=(224,224,3)))\n",
+    "model.add(Conv2D(64,kernel_size=(3,3),activation='relu'))\n",
+    "model.add(BatchNormalization(axis=1))\n",
+    "model.add(MaxPooling2D()) \n",
+    "model.add(Conv2D(128,kernel_size=(3,3),activation='relu'))\n",
+    "model.add(BatchNormalization(axis=1))\n",
+    "model.add(MaxPooling2D())\n",
+    "model.add(Conv2D(512,kernel_size=(3,3),activation='relu'))\n",
+    "model.add(BatchNormalization(axis=1))\n",
+    "model.add(MaxPooling2D())\n",
+    "model.add(Flatten())\n",
+    "model.add(Dense(512,activation='relu'))\n",
+    "model.add(BatchNormalization())\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(Dense(1024,activation='relu'))\n",
+    "model.add(BatchNormalization())\n",
+    "model.add(Dropout(0.5)) \n",
+    "model.add(Dense(10,activation='softmax'))\n",
+    "adam=optimizers.SGD(lr=0.0001,momentum=0.9) \n",
+    "model.compile(optimizer=adam,metrics=['accuracy'],loss='categorical_crossentropy') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "step=14922/15\n",
+    "model.fit_generator(train_batches,step_per_epoch=step,epochs=10)\n"
    ]
   }
  ],
